possible fix of content jumping

--- a/src/styles/elements/_html.css
+++ b/src/styles/elements/_html.css
@@ -1,4 +1,5 @@
 html {
   height: 100%;
   min-width: 320px;
+  -webkit-text-size-adjust: none;
 }
